--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,24 @@
 *.zip
 *.tar.gz
 *.rar
+Help.md
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
