--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
       </plugin>
     </plugins>
+    <finalName>tech-companies-nepal</finalName>
   </build>
 
 </project>
