--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8085
+
 logging.level.org.springframework=INFO
 logging.level.org.tech.company.nepal=INFO
 logging.level.com.zaxxer=DEBUG
@@ -6,8 +8,10 @@ logging.level.root=ERROR
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
-spring.datasource.url=jdbc:mysql://localhost:3306/companies?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
+## spring.datasource.url=jdbc:mysql://localhost:3306/companies?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql-standalone:3306/companies?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+## spring.datasource.username=root
+spring.datasource.username=ramesh
 spring.datasource.password=Manthali@2019M
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
