--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,8 @@ logging.level.root=ERROR
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
-## spring.datasource.url=jdbc:mysql://localhost:3306/companies?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://mysql-standalone:3306/companies?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-## spring.datasource.username=root
-spring.datasource.username=ramesh
+spring.datasource.url=jdbc:mysql://localhost:3306/companies?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
 spring.datasource.password=Manthali@2019M
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
@@ -20,3 +18,7 @@ spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 # drop n create table, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=none
+
+## DOCKER Mysql Configuration
+#spring.datasource.url=jdbc:mysql://mysql-standalone:3306/companies?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+##spring.datasource.username=ramesh
